--- a/app.css
+++ b/app.css
@@ -62,18 +62,72 @@ input, textarea, select {
   font-family: Trade Gothic;
   src: url(fonts/TradeGothic-Bold.woff); }
 
+/* ======== ANIMATIONS ======== */
 @keyframes fadeup {
   0% {
-    transform: translateY(14px) rotate(12deg);
+    transform: translateY(50px);
     opacity: 0; }
   100% {
-    transform: translateY(0px) rotate(0deg);
+    transform: translateY(0px);
     opacity: 1; } }
 
+body {
+  font-family: "Helvetica"; }
+
+/* ======== BUTTONS ======== */
+.btn-primary {
+  background-color: black;
+  color: #fff;
+  border: none;
+  font-size: 12px;
+  padding: 14px 18px;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease; }
+
+.btn-primary:hover {
+  background-color: #2e2e2e; }
+
 /* ======== NAVIGATION ======== */
+nav.navbar {
+  background-color: #fff; }
+
 div.collapse.navbar-collapse.active {
   transition: all 0.4s ease;
   display: block; }
 
-div.row {
-  background-color: blue; }
+.navbar-collapse {
+  justify-content: flex-end; }
+
+.navbar-light .navbar-nav .nav-link {
+  text-transform: uppercase;
+  font-size: 14px;
+  color: black; }
+
+ul.navbar-nav {
+  margin-right: 20px; }
+
+.main-logo {
+  height: 72px; }
+
+li.nav-item {
+  margin: 0 8px; }
+
+/* ======== HERO ======== */
+section.hero {
+  height: 100vh;
+  width: 100vw;
+  position: relative; }
+
+#video-background {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100; }
+
+section.test {
+  height: 200vh;
+  background-color: black; }
