--- a/css/app.scss
+++ b/css/app.scss
@@ -4,15 +4,15 @@
 
 $primary-color: black;
 $white-color: #fff;
-$grey-color: #999999;
-$orange-color: #fc3e17;
-$darkgrey-color: #575757;
+$grey-color: #656565;
+$grey-link: #2e2e2e;
+$blue-color: #dbecf2;
 
-$body-font: "#";
-$title-font: "#";
+$body-font: "Helvetica";
+$serif-font: "Georgia";
 $body-size: 16px;
-$link-size: 13px;
-$uppercase: uppercase;
+$link-size: 14px;
+$button-size: 12px;
 
 $mq-xlarge: 1000px;
 $mq-large: 800px;
@@ -26,22 +26,100 @@ $mq-small: 500px;
     }
 }
 
+
+/* ======== ANIMATIONS ======== */
 @keyframes fadeup {
-    0% {transform: translateY(14px) rotate(12deg); opacity: 0;}
-    100% {transform: translateY(0px) rotate(0deg); opacity: 1;}
+    0% {transform: translateY(50px); opacity: 0;}
+    100% {transform: translateY(0px); opacity: 1;}
   }
 
 
+
+body {
+    font-family: $body-font;
+}
+
+
+
+
+/* ======== BUTTONS ======== */
+
+.btn-primary {
+    background-color: $primary-color;
+    color: $white-color;
+    border: none; 
+    font-size: $button-size;
+    padding: 14px 18px;
+    text-transform: uppercase;
+    transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+    background-color: $grey-link;
+}
+
+
+
+
+
 /* ======== NAVIGATION ======== */
+
+
+nav.navbar {
+    background-color: $white-color;
+}
 
 div.collapse.navbar-collapse.active {
     transition: all 0.4s ease;
     display: block;
 }
 
+.navbar-collapse {
+    justify-content: flex-end;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    text-transform: uppercase;
+    font-size: $link-size;
+    color: $primary-color;
+}
+
+ul.navbar-nav {
+    margin-right: 20px;
+}
+
+.main-logo {
+    height: 72px;
+}
+
+li.nav-item {
+    margin: 0 8px;
+}
 
 
 
-  div.row {
-      background-color: blue;
-  }
+/* ======== HERO ======== */
+
+section.hero {
+    height: 100vh;
+    width:100vw;
+    position: relative;
+}
+
+#video-background {
+    position: absolute;
+    right: 0; 
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    width: auto; 
+    height: auto;
+    z-index: -100;
+}
+
+
+
+section.test {
+    height: 200vh;
+    background-color: $primary-color;
+}
