--- a/app.css
+++ b/app.css
@@ -74,7 +74,13 @@ input, textarea, select {
 /* ======== GENERIC STYLING ======== */
 body {
   font-family: "Helvetica";
-  line-height: 1.3; }
+  line-height: 1.3;
+  color: black; }
+
+h2 {
+  font-size: 32px;
+  text-align: center;
+  text-transform: uppercase; }
 
 span.title-serif {
   font-family: "Georgia";
@@ -95,7 +101,8 @@ span.title-serif {
 
 /* ======== NAVIGATION ======== */
 nav.navbar {
-  background-color: #fff; }
+  background-color: #fff;
+  padding: 12px 40px; }
 
 div.collapse.navbar-collapse.active {
   transition: all 0.4s ease;
@@ -137,20 +144,22 @@ section.hero {
   height: auto;
   z-index: -100; }
 
-section.hero div.hero-title h1 {
-  font-size: 48px;
-  color: #fff;
-  text-align: center;
-  text-transform: uppercase;
-  max-width: 460px; }
+section.hero div.hero-title {
+  margin-top: 100px; }
+  section.hero div.hero-title h1 {
+    font-size: 48px;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    max-width: 460px; }
+  section.hero div.hero-title p {
+    font-family: "Georgia";
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 20px; }
 
-section.hero div.hero-title p {
-  font-family: "Georgia";
-  color: #fff;
-  text-align: center;
-  text-transform: uppercase;
-  margin-bottom: 20px; }
-
+/* ======== Title section ======== */
 section.statement-title {
   height: 100%;
   width: 100vw;
@@ -171,3 +180,34 @@ section.statement-title {
     text-align: center;
     text-transform: uppercase;
     max-width: 500px; }
+
+/* ======== Content section ======== */
+section.content-block {
+  position: relative; }
+  section.content-block div.container-fluid {
+    padding: 0 40px; }
+  section.content-block img {
+    margin: 60px 0; }
+  section.content-block span.dash-top {
+    font-size: 32px; }
+  section.content-block span.dash-bottom {
+    font-size: 32px; }
+
+section.content-block div.row {
+  align-items: center;
+  text-align: center; }
+
+div.background-color {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 80%;
+  background-color: #dbecf2;
+  height: 100%; }
+
+div.col-md p {
+  margin: 30px 0; }
+
+div.col-md div {
+  max-width: 370px;
+  margin: auto; }
