features icons added

--- a/app.css
+++ b/app.css
@@ -211,3 +211,13 @@ div.col-md p {
 div.col-md div {
   max-width: 370px;
   margin: auto; }
+
+/* ======== FEATURES ======== */
+section.features {
+  padding: 120px 20px; }
+  section.features div.row div.flex {
+    display: flex;
+    align-items: center;
+    padding: 20px 16px; }
+    section.features div.row div.flex img {
+      margin-right: 16px; }
