--- a/css/app.scss
+++ b/css/app.scss
@@ -13,6 +13,7 @@ $body-font: "Helvetica";
 $serif-font: "Georgia";
 $h1-size: 48px;
 $h2-size: 32px;
+$h3-size: 24px;
 $body-size: 16px;
 $link-size: 14px;
 $button-size: 12px;
@@ -52,6 +53,11 @@ body {
 h2 {
     font-size: $h2-size;
     text-align: center;
+    text-transform: uppercase;
+}
+
+h3 {
+    font-size: $h3-size;
     text-transform: uppercase;
 }
 
@@ -372,5 +378,34 @@ section.create-layout {
         position: absolute;
         bottom: 40px;
         right: 40px;
+    }
+}
+
+
+
+section.additional {
+
+    img {
+        margin-bottom: 30px;
+    }
+
+    h3, p {
+        margin-bottom: 26px;
+    }
+
+
+}
+
+
+footer {
+    height: 170px;
+    background-color: $primary-color;
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 40px;
+
+    img.up {
+        width: 30px;
+        cursor: pointer;
     }
 }
