--- a/css/app.scss
+++ b/css/app.scss
@@ -7,10 +7,11 @@ $white-color: #fff;
 $grey-color: #656565;
 $grey-link: #2e2e2e;
 $lightgrey-link: #d3d3d3;
+$border-grey: #e6e6e6;
 $blue-color: #dbecf2;
 
 $body-font: "Helvetica";
-$serif-font: "Georgia";
+
 $h1-size: 48px;
 $h2-size: 32px;
 $h3-size: 24px;
@@ -30,6 +31,8 @@ $mq-small: 500px;
         @content;
     }
 }
+
+
 
 
 /* ======== ANIMATIONS ======== */
@@ -62,8 +65,7 @@ h3 {
 }
 
 span.title-serif {
-    font-family: $serif-font;
-    font-style: italic;
+    @include athelas_font(700);
 }
 
 video.block-level--video {
@@ -126,6 +128,7 @@ nav.navbar {
     background-color: $white-color;
     padding: 12px 40px;
     transition: padding 0.4s ease;
+    border-bottom: 1px solid $border-grey;
 }
 
 nav.navbar.scrolled {
@@ -203,7 +206,7 @@ section.hero div.hero-title  {
     }
 
     p {
-        font-family: $serif-font;
+        @include athelas_font(700);
         color: $white-color;
         text-align: center;
         text-transform: uppercase;
