--- a/css/typography.scss
+++ b/css/typography.scss
@@ -1,10 +1,12 @@
 
-@font-face {
-    font-family: "Maison Mono";
-    src: url(fonts/MaisonMono-Regular.woff);
+
+
+@mixin athelas_font($weight) {
+    font-family: "athelas", serif;
+    font-weight: $weight;
+    font-style: italic;
 }
 
-@font-face {
-    font-family: Trade Gothic;
-    src: url(fonts/TradeGothic-Bold.woff);
-}
+
+
+
