--- a/app.css
+++ b/app.css
@@ -160,6 +160,11 @@ section.hero {
   display: flex;
   justify-content: center;
   align-items: center; }
+  section.hero img.scroll-icon {
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%); }
 
 #video-background {
   position: absolute;
@@ -319,3 +324,30 @@ footer {
   footer img.up {
     width: 30px;
     cursor: pointer; }
+
+/* ======== ABOUT PAGE ======== */
+section.statement-title.alt {
+  margin-top: 32px; }
+
+section.history {
+  padding: 140px 10px 0 10px;
+  text-align: center; }
+  section.history span.dash-top {
+    font-size: 32px; }
+  section.history h2 {
+    max-width: 400px;
+    margin: auto; }
+  section.history div.copy p:nth-child(1) {
+    margin: 60px 0 24px 0; }
+
+section.location {
+  text-align: center;
+  padding: 160px 0 0 0; }
+  section.location div.container {
+    margin-bottom: 40px; }
+  section.location span.dash-top {
+    font-size: 32px; }
+  section.location video.block-level--video.fullwidth {
+    width: 100%;
+    padding: 0;
+    transform: translateY(5px); }
