--- a/css/app.scss
+++ b/css/app.scss
@@ -180,6 +180,13 @@ section.hero {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    img.scroll-icon {
+        position: absolute;
+        bottom: 40px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
 
 #video-background {
@@ -435,4 +442,58 @@ footer {
         width: 30px;
         cursor: pointer;
     }
+}
+
+
+
+
+
+/* ======== ABOUT PAGE ======== */
+
+section.statement-title.alt {
+    margin-top: 32px;
+}
+
+
+
+
+section.history {
+    padding: 140px 10px 0 10px;
+    text-align: center;
+
+    span.dash-top {
+        font-size: 32px;
+    }
+
+    h2 {
+        max-width: 400px;
+        margin:auto;
+    }
+
+    div.copy p:nth-child(1) {
+        margin: 60px 0 24px 0;
+    }
+
+}
+
+
+section.location {
+    text-align: center;
+    padding: 160px 0 0 0;
+
+    div.container {
+        margin-bottom: 40px;
+    }
+
+    span.dash-top {
+        font-size: 32px;
+    }
+
+    video.block-level--video.fullwidth {
+        width: 100%;
+        padding: 0;
+        transform: translateY(5px);
+    }
+
+
 }
