contact form added

--- a/app.css
+++ b/app.css
@@ -351,3 +351,7 @@ section.location {
     width: 100%;
     padding: 0;
     transform: translateY(5px); }
+
+section.contact {
+  padding-top: 200px;
+  background-color: #dbecf2; }
