--- a/app.css
+++ b/app.css
@@ -352,6 +352,27 @@ section.location {
     padding: 0;
     transform: translateY(5px); }
 
+/* ======== CONTACT PAGE ======== */
 section.contact {
-  padding-top: 200px;
+  padding: 200px 0 100px 0;
   background-color: #dbecf2; }
+  section.contact div.container-fluid {
+    padding: 0 40px; }
+    section.contact div.container-fluid div.row div.col:nth-child(2) {
+      margin-bottom: 20px; }
+    section.contact div.container-fluid div.col {
+      padding-right: 10px;
+      padding-left: 10px; }
+      section.contact div.container-fluid div.col .form-control {
+        height: calc(1.5em + 1.5rem + 2px); }
+      section.contact div.container-fluid div.col textarea.form-control {
+        height: 80px; }
+      section.contact div.container-fluid div.col button {
+        height: 50px; }
+    section.contact div.container-fluid button {
+      margin-top: 20px; }
+  section.contact h2 {
+    text-align: left;
+    margin-bottom: 20px; }
+  section.contact p {
+    max-width: 370px; }
