--- a/css/app.scss
+++ b/css/app.scss
@@ -446,8 +446,6 @@ footer {
 
 
 
-
-
 /* ======== ABOUT PAGE ======== */
 
 section.statement-title.alt {
@@ -500,8 +498,48 @@ section.location {
 
 
 
+/* ======== CONTACT PAGE ======== */
 
 section.contact {
-    padding-top: 200px;
+    padding: 200px 0 100px 0;
     background-color: $blue-color;
+
+    div.container-fluid {
+        padding: 0 40px;
+
+        div.row div.col:nth-child(2) {
+            margin-bottom: 20px;
+        }
+
+        div.col {
+            padding-right: 10px;
+            padding-left: 10px;
+
+            .form-control {
+                height: calc(1.5em + 1.5rem + 2px);
+            }
+
+            textarea.form-control {
+                height: 80px;
+            }
+
+            button {
+                height: 50px;
+            }
+        }
+
+        button {
+            margin-top: 20px;
+        }
+    }
+
+    h2 {
+        text-align: left;
+        margin-bottom: 20px;
+    }
+
+    p {
+        max-width: 370px;
+    }
+
 }
