--- a/app.css
+++ b/app.css
@@ -366,7 +366,8 @@ section.contact {
       section.contact div.container-fluid div.col .form-control {
         height: calc(1.5em + 1.5rem + 2px); }
       section.contact div.container-fluid div.col textarea.form-control {
-        height: 80px; }
+        height: 80px;
+        padding-top: 12px; }
       section.contact div.container-fluid div.col button {
         height: 50px; }
     section.contact div.container-fluid button {
@@ -387,3 +388,12 @@ section.contact-info {
     section.contact-info div.row div.flex img {
       margin-right: 16px;
       height: 20px; }
+  section.contact-info div.row a {
+    text-decoration: none;
+    color: #fff;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.3s ease; }
+    section.contact-info div.row a:hover {
+      border-bottom: 2px solid #fff; }
+  section.contact-info h4 {
+    margin-bottom: 8px; }
