--- a/css/app.scss
+++ b/css/app.scss
@@ -158,13 +158,13 @@ span.dash-bottom {
 
 
 nav.navbar {
-    background-color: $white-color;
     padding: 12px 40px;
-    transition: padding 0.4s ease;
-    border-bottom: 1px solid $border-grey;
+    transition: all 0.4s ease;
 }
 
 nav.navbar.scrolled {
+    background-color: $white-color;
+    border-bottom: 1px solid $border-grey;
     padding: 6px 40px;
 }
 
@@ -235,7 +235,7 @@ section.hero {
 
 section.hero div.hero-title  {
 
-    margin-top: 100px;
+    // margin-top: 100px;
 
     h1 {
         font-size: $h1-size;
@@ -426,6 +426,7 @@ section.create-layout {
         position: absolute;
         bottom: 40px;
         right: 40px;
+        z-index: 2;
     }
 }
 
@@ -612,5 +613,43 @@ section.contact-info {
 
     h4 {
         margin-bottom: 8px;
+    }
+}
+
+
+
+
+
+/* ======== THE BUILDING ======== */
+
+
+section.hero.alt {
+
+    text-align: center;
+    color: $white-color;
+
+    span.dash-top, span.dash-bottom {
+        font-size: 32px;
+    }
+
+}
+
+section.diagram {
+    padding: 0 40px;
+    position: relative;
+    margin-bottom: 400px;
+
+    div {
+        padding: 30px;
+    }
+
+    div.row.diagram-info {
+        background-color: #fff;
+        position: absolute;
+        bottom: -200px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 80%;
+        margin: auto;
     }
 }
