--- a/app.css
+++ b/app.css
@@ -437,13 +437,32 @@ section.diagram {
   padding: 0 40px;
   position: relative;
   margin-bottom: 400px; }
-  section.diagram div {
-    padding: 30px; }
+  section.diagram div.col-12.col-md-4.flex {
+    padding: 20px;
+    display: flex;
+    align-items: start; }
+    section.diagram div.col-12.col-md-4.flex img {
+      margin-right: 16px; }
   section.diagram div.row.diagram-info {
     background-color: #fff;
     position: absolute;
-    bottom: -200px;
+    bottom: -220px;
     left: 50%;
     transform: translateX(-50%);
     width: 80%;
-    margin: auto; }
+    margin: auto;
+    padding: 40px;
+    min-height: 340px; }
+  section.diagram div.features-wrap p {
+    color: #656565; }
+  section.diagram div.features-wrap h4 {
+    margin-bottom: 6px; }
+
+section.features.building {
+  background-color: black;
+  color: #fff; }
+  section.features.building div.title-wrap {
+    text-align: center;
+    margin: 0 auto 100px auto; }
+    section.features.building div.title-wrap h2 {
+      max-width: 300px; }
