--- a/app.css
+++ b/app.css
@@ -435,8 +435,10 @@ section.hero.alt {
 
 section.diagram {
   padding: 0 40px;
-  position: relative;
-  margin-bottom: 400px; }
+  margin-bottom: 160px; }
+  @media (max-width: 600px) {
+    section.diagram {
+      padding: 0px; } }
   section.diagram div.col-12.col-md-4.flex {
     padding: 20px;
     display: flex;
@@ -445,14 +447,10 @@ section.diagram {
       margin-right: 16px; }
   section.diagram div.row.diagram-info {
     background-color: #fff;
-    position: absolute;
-    bottom: -220px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80%;
-    margin: auto;
-    padding: 40px;
-    min-height: 340px; }
+    padding: 40px; }
+    @media (max-width: 600px) {
+      section.diagram div.row.diagram-info {
+        padding: 20px; } }
   section.diagram div.features-wrap p {
     color: #656565; }
   section.diagram div.features-wrap h4 {
@@ -466,3 +464,22 @@ section.features.building {
     margin: 0 auto 100px auto; }
     section.features.building div.title-wrap h2 {
       max-width: 300px; }
+
+/* ==== slider ==== */
+section.layout-slider {
+  margin-bottom: 160px; }
+  section.layout-slider div.row div.flex {
+    display: flex;
+    align-items: center;
+    padding: 20px 16px; }
+    section.layout-slider div.row div.flex img {
+      margin-right: 16px; }
+
+div.slider-title {
+  text-align: center;
+  padding: 80px 0; }
+  div.slider-title h2 {
+    max-width: 260px;
+    margin: auto; }
+  div.slider-title span {
+    font-size: 32px; }
