--- a/css/app.scss
+++ b/css/app.scss
@@ -659,6 +659,8 @@ section.diagram {
 
         @media (max-width: 600px) {
             padding: 20px;
+
+            margin: 0;
         }
 
     }
@@ -715,8 +717,6 @@ section.layout-slider {
     }
 
 
-
-
 }
 
 div.slider-title {
@@ -731,6 +731,73 @@ div.slider-title {
    span {
        font-size: 32px;
    }
+}
+
+
+section.video-color--bg {
+
+    .fullwidth {
+        @media (max-width: 600px) {
+           padding: 0;
+        }
+    }
+
+    div.video-container--flex {
+        position: relative;
+        
+        div.title-wrap {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            color: $white-color;
+
+            span {
+                font-size: 32px;
+            }
+
+            h2 {
+                max-width: 560px;
+            }
+        }
+
+    }
+
+    div.info-card {
+        background-color: $white-color;
+        display: flex;
+        transform: translateY(-50px);
+        width: 80%;
+        margin: auto;
+        padding: 40px;
+
+        @media (max-width: 600px) {
+            transform: translateY(0px);
+        }
+
+        h3 {
+            margin-bottom: 20px;
+        }
+
+
+        div {
+            width: 50%;
+
+            @media (max-width: 600px) {
+                width: 100%;
+            }
+        }
+
+        @media (max-width: 600px) {
+            display: block;
+            width: 100%;
+
+        }
+    }
+
+
+
 }
 
 
