--- a/app.css
+++ b/app.css
@@ -102,6 +102,11 @@ a {
   will-change: transform;
   will-change: opacity; }
 
+a.external-link {
+  text-decoration: underline;
+  color: black;
+  font-weight: 600; }
+
 span.title-serif {
   font-family: "athelas", serif;
   font-weight: 700;
@@ -120,6 +125,10 @@ span.dash-bottom {
   display: block;
   will-change: transform;
   will-change: opacity; }
+
+/* helpers */
+.mt-lg {
+  margin-top: 120px; }
 
 /* ======== BUTTONS ======== */
 .btn-primary {
@@ -509,10 +518,11 @@ section.video-color--bg div.info-card {
   transform: translateY(-50px);
   width: 80%;
   margin: auto;
-  padding: 40px; }
+  padding: 60px; }
   @media (max-width: 600px) {
     section.video-color--bg div.info-card {
-      transform: translateY(0px); } }
+      transform: translateY(0px);
+      padding: 30px; } }
   section.video-color--bg div.info-card h3 {
     margin-bottom: 20px; }
   section.video-color--bg div.info-card div {
