--- a/app.css
+++ b/app.css
@@ -189,6 +189,12 @@ ul.navbar-nav {
 li.nav-item {
   margin: 0 8px; }
 
+.navbar-light .navbar-toggler {
+  border: none; }
+
+button:focus {
+  outline: none; }
+
 /* ======== HERO ======== */
 section.hero {
   height: 100vh;
@@ -239,6 +245,9 @@ section.statement-title {
   align-items: center;
   padding: 160px 40px;
   flex-direction: column; }
+  @media (max-width: 768px) {
+    section.statement-title {
+      padding: 100px 40px; } }
   section.statement-title span.dash-top {
     font-size: 32px;
     margin-bottom: 70px; }
@@ -254,6 +263,9 @@ section.statement-title {
 /* ======== Content section ======== */
 section.content-block {
   position: relative; }
+  @media (max-width: 768px) {
+    section.content-block {
+      padding-bottom: 100px; } }
   section.content-block div.container-fluid {
     padding: 0 40px; }
   section.content-block img {
@@ -274,6 +286,9 @@ div.background-color {
   width: 80%;
   background-color: #dbecf2;
   height: 100%; }
+  @media (max-width: 768px) {
+    div.background-color {
+      width: 100%; } }
 
 div.col-md p {
   margin: 30px 0; }
@@ -285,8 +300,15 @@ div.col-md div {
 section.content-block--alt {
   margin-top: 120px;
   position: relative; }
+  @media (max-width: 768px) {
+    section.content-block--alt {
+      padding-bottom: 100px;
+      margin-top: -5px; } }
   section.content-block--alt div.container-fluid {
     padding: 0 40px; }
+    @media (max-width: 768px) {
+      section.content-block--alt div.container-fluid div.order-first {
+        order: 1; } }
   section.content-block--alt img {
     margin: 60px 0; }
   section.content-block--alt span.dash-top {
@@ -306,6 +328,9 @@ div.background-color--alt {
   width: 80%;
   background-color: black;
   height: 100%; }
+  @media (max-width: 768px) {
+    div.background-color--alt {
+      width: 100%; } }
 
 div.col-md p {
   margin: 30px 0; }
@@ -327,6 +352,9 @@ section.features {
 /* ======== CREATE ANY LAYOUT ======== */
 section.create-layout {
   position: relative; }
+  @media (max-width: 768px) {
+    section.create-layout video.block-level--video {
+      padding: 0; } }
   section.create-layout h2 {
     position: absolute;
     bottom: 40px;
@@ -342,6 +370,9 @@ section.additional {
     margin-bottom: 26px; }
   section.additional div.container-fluid {
     padding: 0 40px; }
+    @media (max-width: 768px) {
+      section.additional div.container-fluid div.row div:nth-child(2) {
+        margin-top: 60px; } }
 
 main {
   margin-bottom: 200px;
@@ -369,6 +400,9 @@ section.statement-title.alt {
 section.history {
   padding: 140px 10px 0 10px;
   text-align: center; }
+  @media (max-width: 768px) {
+    section.history {
+      padding: 100px 10px; } }
   section.history span.dash-top {
     font-size: 32px; }
   section.history h2 {
@@ -509,8 +543,14 @@ section.video-color--bg div.video-container--flex {
     color: #fff; }
     section.video-color--bg div.video-container--flex div.title-wrap span {
       font-size: 32px; }
+      @media (max-width: 600px) {
+        section.video-color--bg div.video-container--flex div.title-wrap span {
+          font-size: 18px; } }
     section.video-color--bg div.video-container--flex div.title-wrap h2 {
       max-width: 560px; }
+      @media (max-width: 600px) {
+        section.video-color--bg div.video-container--flex div.title-wrap h2 {
+          font-size: 16px; } }
 
 section.video-color--bg div.info-card {
   background-color: #fff;
@@ -521,7 +561,7 @@ section.video-color--bg div.info-card {
   padding: 60px; }
   @media (max-width: 600px) {
     section.video-color--bg div.info-card {
-      transform: translateY(0px);
+      transform: translateY(-30px);
       padding: 30px; } }
   section.video-color--bg div.info-card h3 {
     margin-bottom: 20px; }
@@ -533,4 +573,14 @@ section.video-color--bg div.info-card {
   @media (max-width: 600px) {
     section.video-color--bg div.info-card {
       display: block;
-      width: 100%; } }
+      width: 90%; } }
+
+@media (max-width: 768px) {
+  .mt-lg {
+    margin-top: 0; } }
+
+@media (max-width: 768px) {
+  section.hero div.hero-title h1 {
+    font-size: 38px; }
+  h2 {
+    font-size: 26px; } }
