--- a/css/typography.scss
+++ b/css/typography.scss
@@ -7,6 +7,12 @@
     font-style: italic;
 }
 
+@font-face {
+    font-family: Campton Light;
+    src: url(/fonts/campton-light.woff2), url(fonts/campton-light.woff);
+}
 
-
-
+@font-face {
+    font-family: Campton Bold;
+    src: url(/fonts/campton-bold.woff2), url(fonts/campton-bold.woff);
+}
