--- a/css/typography.scss
+++ b/css/typography.scss
@@ -9,10 +9,10 @@
 
 @font-face {
     font-family: Campton Light;
-    src: url(fonts/campton-light.woff2), url(fonts/campton-light.woff);
+    src: url(fonts/campton-light.woff);
 }
 
 @font-face {
     font-family: Campton Bold;
-    src: url(fonts/campton-bold.woff2), url(fonts/campton-bold.woff);
+    src: url(fonts/campton-bold.woff);
 }
