--- a/app.css
+++ b/app.css
@@ -56,11 +56,11 @@ input, textarea, select {
 
 @font-face {
   font-family: Campton Light;
-  src: url(/fonts/campton-light.woff2), url(fonts/campton-light.woff); }
+  src: url(fonts/campton-light.woff); }
 
 @font-face {
   font-family: Campton Bold;
-  src: url(/fonts/campton-bold.woff2), url(fonts/campton-bold.woff); }
+  src: url(fonts/campton-bold.woff); }
 
 /* ======== ANIMATIONS ======== */
 @keyframes fadein {
